Bug 42686: Remove an assertion which was preventing dogfood use on Mac.  r=jst@netscape.com (thanks!)