view/src/nsScrollPortView.cpp
@@ -249,7 +249,11 @@ NS_IMETHODIMP nsScrollPortView::ScrollTo(nscoord aX, nscoord aY, PRUint32 aUpdat
 
     // make sure the new position in in bounds
 	GetScrolledView(scrolledView);
+
+#ifdef DEBUG_pollmann
 	NS_ASSERTION(scrolledView, "no scrolled view");
+#endif
+
 	if (!scrolledView) return NS_ERROR_FAILURE;
 	scrolledView->GetDimensions(&scrolledSize.width, &scrolledSize.height);
 
